create variables and basic event listeners for each button

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <div class="calcContainer">
             <div class="calcHeader">TOP Calculator</div>
-            <div class="input">123,456</div>
+            <div class="input" id="input"></div>
             <div class="buttonContainer">
-                <button id="clear" class="topRow">AC</button>
+                <button id="allClear" class="topRow">AC</button>
                 <button id="delete" class="topRow">C</button>
                 <button id="plusMinus" class="topRow">+/-</button>
                 <button id="divide" class="operators">&#247;</button>
