add positive negative button functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="buttonContainer">
                 <button id="allClear" class="topRow">AC</button>
                 <button id="delete" class="topRow">C</button>
-                <button id="plusMinus" class="topRow">+/-</button>
+                <button id="posNeg" class="topRow">+/-</button>
                 <button id="divide" class="operators">&#247;</button>
                 <button id="seven" class="numbers">7</button>
                 <button id="eight" class="numbers">8</button>
