fix decimal btton bug

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button id="three" class="numbers">3</button>
                 <button id="add" class="operators">+</button>
                 <button id="zero" class="numbers">0</button>
-                <button id="decimal" class="numbers">.</button>
+                <button id="decimal">.</button>
                 <button id="equal" class="operators">=</button>
             </div>
         </div>
