create second input display to display entire calculation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div class="calcContainer">
+            <div class="secondInput" id="secondInput"></div>
             <div class="input" id="input"></div>
             <div class="buttonContainer">
                 <button id="allClear" class="topRow">AC</button>
